# Temerald

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_GOALS.md  README.md
include/engine/: RenderLoop.h
include/render/: Device.h
include/scene/: Camera.h
include/util/: hr.h  log.h
include/world/: GuidedPath.h  PathFollower.h
src/app/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  RenderLoop.cpp
src/render/: CMakeLists.txt  Device.cpp
src/world/: CMakeLists.txt  GuidedPath.cpp  PathFollower.cpp
